--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -289,8 +289,11 @@ h1, h2, h3, h4, h5, h6 {
             @media (min-width:768px){
                 width:260px;
                 margin-right:30px;
+                display:table;
                 .row {
+                    display: table-row;
                     .date, .time, .place {
+                        display: table-cell;
                         width: 260px;
                         height:125px;
                         vertical-align: middle;
@@ -301,9 +304,11 @@ h1, h2, h3, h4, h5, h6 {
             @media (min-width:992px){
                 width:300px;
                 margin-right:30px;
+                display:table;
                 .row {
                     display: table-row;
                     .date, .time, .place {
+                        display: table-cell;
                         width: 300px;
                         height:125px;
                         vertical-align: middle;
