--- a/public/assets/css/panel.less
+++ b/public/assets/css/panel.less
@@ -419,6 +419,11 @@ Sidebar toggler
     .nav-tabs {
         margin-bottom: 20px;
     }
+
+    .table-tool {
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
     
 
     .form-signin {
