Add poster for acara

--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -59,6 +59,24 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
+.affix {
+    top:65px;
+    position:fixed !important;
+}
+
+.social-buttons {
+    >div {
+        width:60px;
+        display: inline-block;
+        height: 26px;
+        overflow: hidden;
+    }
+
+    .fb_iframe_widget span {
+        height: 26px!important;
+    }
+}
+
 // --------------------------------------------------------
 // Jumbotron
 // --------------------------------------------------------
