--- a/public/assets/css/panel.less
+++ b/public/assets/css/panel.less
@@ -477,6 +477,24 @@ Sidebar toggler
         }
     }
 
+    .img-container {
+      position: relative;
+      margin-bottom: 15px;
+
+      form {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        display: none;
+      }
+
+      &:hover {
+        form {
+          display: block;
+        }
+      }
+    }
+
     // -------------------------------------------------------
     // Footer
     // --------------------------------------------------------
