--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -81,7 +81,7 @@ h6 {
   .navbar.big {
     height: 100px !important;
   }
-  .navbar.big li {
+  .navbar.big .nav > li {
     margin-top: 23px !important;
   }
   .navbar.big .navbar-brand {
@@ -122,12 +122,33 @@ h6 {
   .jumbotron {
     min-height: 500px;
   }
+  .jumbotron.ifgames.form {
+    min-height: 215px;
+  }
 }
 .jumbotron.home {
   background: url('../images/home-banner.jpg') #252525 center;
 }
 .jumbotron.event {
   background: url('../images/event-banner.jpg') #252525 center;
+}
+.jumbotron.ifgames {
+  background: #f39c12 center;
+}
+.jumbotron.ifgames.basket {
+  background: url('../images/ifgames-basket-banner.jpg') #b71524 center;
+}
+.jumbotron.ifgames.bulu-tangkis-double {
+  background: url('../images/ifgames-bulu-tangkis-double-banner.jpg') #b71524 center;
+}
+.jumbotron.ifgames.bulu-tangkis-single {
+  background: url('../images/ifgames-bulu-tangkis-single-banner.jpg') #b71524 center;
+}
+.jumbotron.ifgames.catur {
+  background: url('../images/ifgames-catur-banner.jpg') #b71524 center;
+}
+.jumbotron.ifgames.futsal {
+  background: url('../images/ifgames-futsal-banner.jpg') #b71524 center;
 }
 .jumbotron.keanggotaan {
   background: url('../images/keanggotaan-banner.jpg') #252525 center;
@@ -141,6 +162,11 @@ h6 {
 .photo-layer {
   background-size: cover;
   background-position: center;
+}
+.divider-layer {
+  background-position: top;
+  background-repeat: no-repeat;
+  padding-top: 100px;
 }
 .big-container.blue {
   background-color: #2980b9;
@@ -589,6 +615,89 @@ h6 {
   -moz-box-shadow: 0 0 2px #f0efe7;
   box-shadow: 0 0 2px #f0efe7;
 }
+.team-member.big {
+  width: 970px !important;
+}
+.team-member.big h1,
+.team-member.big h2,
+.team-member.big h3,
+.team-member.big h4,
+.team-member.big h5,
+.team-member.big h6 {
+  margin-top: 0 !important;
+  margin-bottom: 20px !important;
+}
+.team-member.big h2 {
+  font-size: 27px;
+  font-family: 'Bitter', serif;
+}
+@media (min-width: 768px) {
+  .team-member.big h2 {
+    font-size: 48px;
+  }
+}
+.team-member.big h3 {
+  font-size: 20px;
+  font-family: 'Bitter', serif;
+}
+@media (min-width: 768px) {
+  .team-member.big h3 {
+    font-size: 36px;
+  }
+}
+.team-member.big h4 {
+  font-size: 16px;
+  font-family: 'Bitter', serif;
+}
+@media (min-width: 768px) {
+  .team-member.big h4 {
+    font-size: 28px;
+  }
+}
+.team-member.big .team-member-container {
+  margin-bottom: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.team-member.big .team-member-container.blm-lengkap h4 {
+  background: #f2dede;
+}
+.team-member.big .team-member-container:hover {
+  background: #f5f5f5;
+}
+.team-member.big .team-member-container:hover .team-member-tool {
+  visibility: visible;
+}
+.team-member.big .team-member-container:hover .team-member-identity form {
+  visibility: visible;
+}
+.team-member.big .team-member-container h4 {
+  position: absolute;
+  left: 0;
+  top: 0px;
+  color: #fff !important;
+  background: #FFF;
+  width: 30px;
+  height: 35px;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+}
+.team-member.big .team-member-identity form {
+  visibility: hidden;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.team-member.big .team-member-identity dl {
+  width: 195px;
+}
+.team-member.big .team-member-identity dl.big {
+  width: 335px;
+}
+.team-member.big .team-member-tool {
+  visibility: hidden;
+}
 .tagline-hmif {
   background: #ffffff;
 }
@@ -741,7 +850,7 @@ footer .container .sponsor .link div {
 }
 footer .container .social .link div a,
 footer .container .sponsor .link div a {
-  font-size: 11px;
+  font-size: 12px;
   font-family: 'Raleway', sans-serif;
 }
 footer .container .social .link div a .name,
