Fix image manipulation memory ussage and css v1.2.1

--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -140,16 +140,16 @@ legend,
   background: #f39c12 center;
 }
 .jumbotron.ifgames.basket {
-  background: url('../images/ifgames-basket-banner.jpg') #b71524 center;
+  background: url('../images/ifgames-basket-banner.jpg') #721f6d center;
 }
 .jumbotron.ifgames.bulu-tangkis-double {
-  background: url('../images/ifgames-bulu-tangkis-double-banner.jpg') #b71524 center;
+  background: url('../images/ifgames-bulu-tangkis-double-banner.jpg') #c0bf05 center;
 }
 .jumbotron.ifgames.bulu-tangkis-single {
-  background: url('../images/ifgames-bulu-tangkis-single-banner.jpg') #b71524 center;
+  background: url('../images/ifgames-bulu-tangkis-single-banner.jpg') #c0bf05 center;
 }
 .jumbotron.ifgames.catur {
-  background: url('../images/ifgames-catur-banner.jpg') #b71524 center;
+  background: url('../images/ifgames-catur-banner.jpg') #055997 center;
 }
 .jumbotron.ifgames.futsal {
   background: url('../images/ifgames-futsal-banner.jpg') #b71524 center;
