--- a/public_html/assets/css/main.less
+++ b/public_html/assets/css/main.less
@@ -111,19 +111,19 @@ legend, .alert {
         background: @orange center;    
 
         &.basket {
-            background: url('../images/ifgames-basket-banner.jpg') #b71524 center;    
+            background: url('../images/ifgames-basket-banner.jpg') #721f6d center;    
         }
 
         &.bulu-tangkis-double {
-            background: url('../images/ifgames-bulu-tangkis-double-banner.jpg') #b71524 center;    
+            background: url('../images/ifgames-bulu-tangkis-double-banner.jpg') #c0bf05 center;    
         }
 
         &.bulu-tangkis-single {
-            background: url('../images/ifgames-bulu-tangkis-single-banner.jpg') #b71524 center;    
+            background: url('../images/ifgames-bulu-tangkis-single-banner.jpg') #c0bf05 center;    
         }
 
         &.catur {
-            background: url('../images/ifgames-catur-banner.jpg') #b71524 center;    
+            background: url('../images/ifgames-catur-banner.jpg') #055997 center;    
         }
 
         &.futsal {
