--- a/public_html/assets/css/main.less
+++ b/public_html/assets/css/main.less
@@ -131,6 +131,10 @@ legend, .alert {
         }
     }
 
+    &.pelatihan {
+        background: @pwti center;   
+    }
+
     &.keanggotaan {
         background: url('../images/keanggotaan-banner.jpg') @grey center;    
     }
