--- a/public_html/assets/css/mixins.less
+++ b/public_html/assets/css/mixins.less
@@ -17,6 +17,14 @@
 @grey-text : #6e6e6e;
 @white  : #fff;
 
+
+@adm  : #e77e23;
+@humas : #2a80b9;
+@litbang : #4bec8f;
+@kerohanian : #9b58b5;
+@pwti : #03956e;
+@olahraga :  #ffc600;
+
 // --------------------------------------------------------
 // Typograph
 // --------------------------------------------------------
