--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -41,18 +41,6 @@ legend,
 .unvisible {
   display: none;
 }
-.navbar {
-  -webkit-transition: height 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -moz-transition: height 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -ms-transition: height 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -o-transition: height 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-}
-.navbar li {
-  -webkit-transition: margin 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -moz-transition: margin 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -ms-transition: margin 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -o-transition: margin 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-}
 .navbar .navbar-brand {
   padding-top: 10px;
   color: white;
@@ -60,10 +48,6 @@ legend,
   font-size: 15px;
   font-family: 'Bitter', serif;
   font-weight: bold;
-  -webkit-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -moz-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -ms-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -o-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
 }
 @media (min-width: 768px) {
   .navbar .navbar-brand {
@@ -73,10 +57,6 @@ legend,
 .navbar .navbar-brand img {
   height: 30px;
   margin-right: 15px;
-  -webkit-transition: height 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -moz-transition: height 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -ms-transition: height 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
-  -o-transition: height 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
 }
 @media (min-width: 768px) {
   .navbar {
@@ -817,6 +797,15 @@ legend,
   border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.form-signin input[type="password"].middle {
+  margin-bottom: -1px;
+  border-radius: 0;
+}
+.form-signin input[name="password_confirmation"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
