--- a/public_html/assets/css/cakrawala.less
+++ b/public_html/assets/css/cakrawala.less
@@ -49,6 +49,8 @@ body {
 }
 
 .kompetisi-debat {
+    background-image: url('../images/cakrawala/paper.jpg');
+    background-size: cover; color: #333
     position: relative;
 
     .mic {
