--- a/public_html/assets/css/cakrawala.less
+++ b/public_html/assets/css/cakrawala.less
@@ -127,6 +127,10 @@ body {
 
         .panel-body {
             border-top-color: #FFF !important;
+
+            .scroll {
+                max-height: 220px;
+            }
         }
 
         + .panel {
@@ -244,6 +248,10 @@ body {
                 float: left;
                 color: #fff;
                 width:480px;
+
+                .scroll {
+                    max-height: 205px;
+                }
             }
         }
     }
@@ -361,7 +369,11 @@ body {
         .panel-content {
             padding:15px 15px 15px 55px;
             height:240px;
-            width:778px;
+            width:850px;
+
+            .scroll {
+                max-height: 235px;
+            }
         }
     }
 }
