Add google+ attributes

--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -439,9 +439,6 @@ legend,
   padding-top: 3px;
   display: inline-block;
 }
-@media (min-width: 768px) {
-  
-}
 .event-item-container .event-container .info-container .date .month-year .month {
   text-transform: uppercase;
   font-size: 20px;
@@ -590,6 +587,7 @@ legend,
   -moz-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -ms-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -o-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
+  transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
 }
 .jcarousel-pagination a.active {
   background: #4E443C;
@@ -694,6 +692,7 @@ legend,
   -moz-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -ms-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -o-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
+  transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
 }
 .cabang > div:hover {
   background: #f5f5f5 !important;
@@ -706,6 +705,7 @@ legend,
   -moz-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -ms-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -o-transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
+  transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
 }
 .cabang > div a:hover {
   text-decoration: none;
@@ -897,4 +897,8 @@ footer .container .sponsor .link div.facebook a .fa {
 footer .container .social .link div.twitter a .fa,
 footer .container .sponsor .link div.twitter a .fa {
   color: #1ae8c1;
+}
+footer .container .social .link div.gplus a .fa,
+footer .container .sponsor .link div.gplus a .fa {
+  color: #DB4439;
 }
