--- a/public_html/assets/css/main.less
+++ b/public_html/assets/css/main.less
@@ -883,6 +883,14 @@ footer {
                             }
                         }
                     }
+
+                    &.gplus {
+                        a {
+                            .fa {
+                                color : #DB4439;
+                            }
+                        }
+                    }
                 }
             }
         }
