Revision persyaratan and mekanisme lomba

--- a/public_html/assets/css/cakrawala.less
+++ b/public_html/assets/css/cakrawala.less
@@ -8,6 +8,17 @@ body {
     margin-bottom:0;
 }
 
+.square-list {
+    list-style-type:square;
+}
+
+.list-tanggal {
+    li {
+        .square-list;
+        margin-bottom:10px;
+    }   
+}
+
 .navbar .navbar-brand {
     position: relative;
     padding-left: 95px;
