--- a/public_html/assets/css/cakrawala.css
+++ b/public_html/assets/css/cakrawala.css
@@ -14,6 +14,13 @@ body {
 .section.table {
   margin-bottom: 0;
 }
+.square-list {
+  list-style-type: square;
+}
+.list-tanggal li {
+  list-style-type: square;
+  margin-bottom: 10px;
+}
 .navbar .navbar-brand {
   position: relative;
   padding-left: 95px;
@@ -24,6 +31,7 @@ body {
   -moz-transition: opacity 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -ms-transition: opacity 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -o-transition: opacity 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
+  transition: opacity 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   background-image: url('../images/cakrawala/logo.png');
   background-repeat: no-repeat;
   background-position: -231px 0;
@@ -146,6 +154,7 @@ body {
   -moz-transition: opacity 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -ms-transition: opacity 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -o-transition: opacity 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
+  transition: opacity 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   position: absolute;
   left: 0;
   top: 0;
@@ -172,6 +181,7 @@ body {
   -moz-transition: background 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -ms-transition: background 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -o-transition: background 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
+  transition: background 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   height: 300px;
   padding: 50px 30px;
 }
@@ -301,6 +311,7 @@ body {
   -moz-transition: background-color 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -ms-transition: background-color 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   -o-transition: background-color 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
+  transition: background-color 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
   background-image: url('../images/cakrawala/lkti-title.png');
   background-repeat: no-repeat;
   width: 40px;
